move server to root for render

--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,6 @@
 
   <div class="products" id="products"></div>
 
-  <script src="js/server.js"></script>
+  <script src="server.js"></script>
 </body>
 </html>
